// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericCard should render correctly as a button 1`] = `
<div>
  <div
    aria-label="Title - as a button"
    class="cursor-pointer rounded-sm h-full relative overflow-hidden whitespace-normal before:absolute before:!bg-generic-card-gradient before:inset-0 hover:before:!bg-generic-card-gradient-hovered hover:before:bg-[#3c42583d] hover:shadow-300 group/card"
    role="button"
  >
    <img
      class="w-full h-full object-cover"
      src="https://picsum.photos/600/300"
    />
    <div
      class="absolute inset-0 group-hover/card:pb-sm group-hover/card:xxxl:pb-base px-sm pt-sm pb-base xxxl:px-base xxxl:pt-base xxxl:pb-md"
    >
      <div
        class="relative h-full flex flex-col justify-end"
      >
        <div>
          <div
            class="flex flex-row-reverse justify-between absolute top-0 right-0 left-0 items-center"
          >
            <div
              class="border border-white rounded-full overflow-hidden"
            >
              <div
                class="flex"
              >
                <div
                  class="flex align-center justify-center grow-0 shrink-0 transition-colors ms-auto h-md w-md xxxl:h-lg xxxl:w-lg text-white group-hover/card:bg-white group-hover/card:text-primary-500 p-xxs"
                  data-testid="icon"
                >
                  <div
                    class="h-base w-base"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex flex-col"
            >
              <div
                class="w-fit"
              />
            </div>
          </div>
        </div>
        <span
          data-state="closed"
        >
          <div
            class="flex text-neutral-300 items-center gap-xxs mb-xxxs"
          >
            <div
              class="flex"
            >
              <div
                class="flex align-center justify-center grow-0 shrink-0"
                data-testid="icon"
              >
                <div
                  class="h-sm w-sm"
                />
              </div>
            </div>
            <div
              class="text-xxs xxxl:text-xs italic leading-lg truncate"
            >
              Pathway Name - as a button
            </div>
          </div>
        </span>
        <span
          data-state="closed"
        >
          <span
            data-testid="text-highlighter"
          >
            <h5
              class="text-white text-xs xxxl:text-lg leading-[1.2] line-clamp-3 mb-0 highlightible"
            >
              Title - as a button
            </h5>
          </span>
        </span>
        <div
          class="w-full overflow-hidden"
          style="height: 0px; transform: translateY(16px) translateZ(0);"
        >
          <div
            class="pt-xxs flex items-center gap-xs"
          >
            <span
              class="min-w-0"
              data-state="closed"
            >
              <h6
                class="mb-0 font-medium text-xs xxxl:text-base leading-lg truncate text-warning-500"
              >
                Sub title - as a button
              </h6>
            </span>
            <div
              class="ms-auto"
            >
              <span
                class="min-w-0"
                data-state="closed"
              >
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 text-white"
                    data-testid="icon"
                  >
                    <div
                      class="h-base w-base"
                    />
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericCard should render correctly as a link 1`] = `
<div>
  <a
    href="/courses"
  >
    <div
      aria-label="Title"
      class="cursor-pointer rounded-sm h-full relative overflow-hidden whitespace-normal before:absolute before:!bg-generic-card-gradient before:inset-0 hover:before:!bg-generic-card-gradient-hovered hover:before:bg-[#3c42583d] hover:shadow-300 group/card"
      role="none"
    >
      <img
        class="w-full h-full object-cover"
        src="https://picsum.photos/600/300"
      />
      <div
        class="absolute inset-0 group-hover/card:pb-sm group-hover/card:xxxl:pb-base px-sm pt-sm pb-base xxxl:px-base xxxl:pt-base xxxl:pb-md"
      >
        <div
          class="relative h-full flex flex-col justify-end"
        >
          <div>
            <div
              class="flex flex-row-reverse justify-between absolute top-0 right-0 left-0 items-center"
            >
              <div
                class="border border-white rounded-full overflow-hidden"
              >
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 transition-colors ms-auto h-md w-md xxxl:h-lg xxxl:w-lg text-white group-hover/card:bg-white group-hover/card:text-primary-500 p-xxs"
                    data-testid="icon"
                  >
                    <div
                      class="h-base w-base"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col"
              >
                <div
                  class="w-fit"
                />
              </div>
            </div>
          </div>
          <span
            data-state="closed"
          >
            <div
              class="flex text-neutral-300 items-center gap-xxs mb-xxxs"
            >
              <div
                class="flex"
              >
                <div
                  class="flex align-center justify-center grow-0 shrink-0"
                  data-testid="icon"
                >
                  <div
                    class="h-sm w-sm"
                  />
                </div>
              </div>
              <div
                class="text-xxs xxxl:text-xs italic leading-lg truncate"
              >
                Pathway Name
              </div>
            </div>
          </span>
          <span
            data-state="closed"
          >
            <span
              data-testid="text-highlighter"
            >
              <h5
                class="text-white text-xs xxxl:text-lg leading-[1.2] line-clamp-3 mb-0 highlightible"
              >
                Title
              </h5>
            </span>
          </span>
          <div
            class="w-full overflow-hidden"
            style="height: 0px; transform: translateY(16px) translateZ(0);"
          >
            <div
              class="pt-xxs flex items-center gap-xs"
            >
              <span
                class="min-w-0"
                data-state="closed"
              >
                <h6
                  class="mb-0 font-medium text-xs xxxl:text-base leading-lg truncate text-warning-500"
                >
                  Sub title
                </h6>
              </span>
              <div
                class="ms-auto"
              >
                <span
                  class="min-w-0"
                  data-state="closed"
                >
                  <div
                    class="flex"
                  >
                    <div
                      class="flex align-center justify-center grow-0 shrink-0 text-white"
                      data-testid="icon"
                    >
                      <div
                        class="h-base w-base"
                      />
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;
